[package]
name = "gated-inference"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Signature-gated LLM inference server. Verifies ECDSA-secp256k1 on inbound requests against a pinned pubkey, then runs llama.cpp and signs the response."
license = "MIT OR Apache-2.0"

[lib]
name = "gated_inference"
path = "src/lib.rs"

[[bin]]
name = "gated-inference-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
encoding_rs = "0.8"
hex = "0.4"
llama-cpp-2 = "0.1"
lru = "0.12"
parking_lot = "0.12"
secp256k1 = { version = "0.29", features = ["std", "rand-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
